# swap-exceptions

./: README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
swap_exceptions/: __init__.py
tests/: test_swap_exceptions.py
