[tool.poetry]
name = "swap-exceptions"
version = "1.0.0"
description = "Python utility decorator and context manager for swapping exceptions"
authors = ["Tom <tomgrin10@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/tomgrin10/swap-exceptions"
documentation = ""

keywords = ["swap", "exceptions", "switch", "replace", "utility"]

classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Intended Audience :: Developers',
        'Topic :: Utilities',
        'Typing :: Typed'
]

[tool.poetry.dependencies]
python = "^2.7 || ^3.4"

contextlib2 = {version = "^0.6.0", python = "^2.7"}
typing = {version = "^3.7.4", python = "^2.7"}
six = "^1.15.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", python = "^3.7"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
