[tool.poetry]
name = "swap-exceptions"
version = "1.0.1"
description = "Python utility decorator and context manager for swapping exceptions"
authors = ["Tom Gringauz <tomgrin10@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/tomgrin10/swap-exceptions"
documentation = ""

keywords = ["swap", "exceptions", "switch", "replace", "utility"]

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Utilities',
    'Typing :: Typed'
]


[tool.poetry.dependencies]
python = "^2.7 || ^3.5"

contextlib2 = {version = "^0.6.0", python = "^2.7"}
typing = {version = "^3.7.4", python = "^2.7"}
six = "^1.15.0"


[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", python = "^3.7"}
isort = {version = "^5.4.2", python = "^3.7"}
pytest = "^4.6.11"


[tool.isort]
profile = "black"


[tool.black]
line-length = 90


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
